2008-07-08  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/10-xorb-exceptions-procs.tcl: Facilitated the creation for
	application-specific/ custom exception kinds to be
	specified. Includes minor fix for ad_docs on exception class
	objects to do not vanish in the course of processing.

2008-06-16  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* xotcl-request-broker.info: Bumped xotcl-core dependency to
	0.87+.

2008-06-11  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-interceptors-procs.tcl: We provide for a more robust
	resolution (and fall-back) for chain of interceptors. The old way
	showed a weakness after the renaming of ::xorb::consumer_chain to
	::xorb::client::consumer_chain. This weakness was due to the use
	of the chain object's relative name as parameter key. Thanks to
	Emmanuelle Raffenne for bringing up the issue and providing an
	initial patch. 

2008-06-09  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-callback-procs.tcl (before-uninstall): Make 0.3 ->
	post-0.3 upgrades more robust (fail-safe). Thanks to Emmanuelle
	Raffenne for reporting.

2008-05-12  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* www/doc/manual/src: Added new listings package to complete the
	manual build environment. 

	* tcl/20-xorb-procs.tcl: Finally, provide compatibility to naming
	scheme of message types as used by acs-workflow (at least, some
	older versions). Once, you have got acs-workflow installed,
	previous xorb versions might fail or show irritating behaviour as
	they could not handle the four-element scheme to name message
	types. The issue was originally reported by Malte and Emma, thanks
	to you guys for raising hands.

2008-03-26  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Introduced ::xo::library and articulated first file-level
	dependencies.

	* Bumped version number to 0.5d.

	* In XOTcl 1.6+, the semantics of some info subcommands accepting